# QuickTab

./: .env  .gitignore  LICENSE  README.md  config.py  currency.py  main.py  news.py  pyproject.toml  requirements.txt  weather.py
config/: settings.json
core/: __init__.py  data_fetcher.py  driver.py
database/: __init__.py  analytics.py  cache_adapter.py  db_manager.py  migration.py  models.py
gui/: __init__.py  app.py  dashboard.py
gui/components/: __init__.py  cards.py  results.py  search_filters.py  toggle_button.py
gui/pages/: __init__.py  about.py  base_page.py  home.py  search.py  settings.py
modules/: __init__.py  currency.py  driver_lock.py  news.py  weather.py
