[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "quicktab"
version = "1.0.0"          
authors = [{name = "Yaroslav Belov"}]
description = "QuickTab"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "customtkinter==5.2.2",          
    "selenium==4.15.2",              
    "webdriver-manager==4.0.1",      
    "beautifulsoup4==4.14.3",        
    "requests==2.32.5",             
    "google-generativeai>=0.8.0",
    "aiohttp==3.9.1"
]

[project.scripts]
quicktab = "quicktab.main:run_quicktab"
